# skellysolver

./: README.md  pyproject.toml
docs/: all_phases_final.md  final_summary.md  phase1_complete.md  phase1_installation.md  phase2_complete.md  phase2_installation.md  phase3_complete.md  phase3_installation.md  phase4_complete.md  phase4_installation.md  phase5_complete.md  phase5_installation.md  quickstart_guide.md  refactoring_guide.md  skellysolver_architecture.md
examples/: eye_tracking_demo.py  ferret_skeleton_demo.py  ferret_skull_demo.py  synthetic_cube_demo.py  synthetic_cube_skeleton_demo.py
old/old_broken_rigid_body_tracker/: api.py
old/old_rigid_body_tracker/: api.py
skellysolver/batch/: batch_config.py  batch_init.py  batch_processor.py  batch_report.py  batch_utils.py
skellysolver/batch_processing/: __init__.py  batch_config.py  batch_processor.py  batch_report.py  batch_utils.py
skellysolver/core/: __init__.py  chunking.py  config.py  optimization_result.py  optimizer.py  result.py  solver_config.py
skellysolver/cost_primatives/: base_cost.py  cost_info_model.py  edge_consts.py  manifold_helpers.py  measurement_costs.py  smoothness_costs.py
skellysolver/data/: __init__.py  arbitrary_types_model.py  base_data.py  data_models.py  dataset_manager.py  formats.py  loaders.py  preprocessing.py  trajectory_dataset.py  validators.py
skellysolver/io/: __init__.py  io_init.py  loaders.py
skellysolver/pipelines/: __init__.py  base_pipeline.py  eye_pipeline.py  metrics.py  rigid_body_pipeline.py  savers.py  topology.py
skellysolver/tests/: test_io.py  (+9 more)
(+139 files in other folders)
